--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,4 @@
-<h1>The Best Movies According to Pranav</h1>
+<h1>The Best Anime According to Pranav</h1>
 <h2>My top 3 Anime of all-time.</h2>
 <hr />
 <h3>Code Geass</h3>
